# ICRA_ai_challenge

./: README.md  octomap.rviz
hardware/: CMakeLists.txt  README.md  package.xml
hardware/launch/: hokuyo.launch  rplidar.launch  rplidar_launch.launch
mapper/: CMakeLists.txt  README.md  package.xml
mapper/launch/: octomap_server_launch.launch
mapper/src/: .laserscan_to_pointcloud_converter.cpp.swp  base_link_broadcaster.cpp  laserscan_to_pointcloud_converter.cpp  lidartop_broadcaster.cpp  tf_broadcaster.cpp
